new end point and different response code for certain case
